--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,22 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#74b481",
-        "activityBar.background": "#74b481",
+        "activityBar.activeBackground": "#ffffff",
+        "activityBar.background": "#ffffff",
         "activityBar.foreground": "#15202b",
         "activityBar.inactiveForeground": "#15202b99",
-        "activityBarBadge.background": "#eceaf4",
+        "activityBarBadge.background": "#df9f9f",
         "activityBarBadge.foreground": "#15202b",
         "commandCenter.border": "#15202b99",
-        "sash.hoverBorder": "#74b481",
-        "statusBar.background": "#569f65",
+        "sash.hoverBorder": "#ffffff",
+        "statusBar.background": "#e6e6fa",
         "statusBar.foreground": "#15202b",
-        "statusBarItem.hoverBackground": "#447e50",
-        "statusBarItem.remoteBackground": "#569f65",
+        "statusBarItem.hoverBackground": "#bbbbf1",
+        "statusBarItem.remoteBackground": "#e6e6fa",
         "statusBarItem.remoteForeground": "#15202b",
-        "titleBar.activeBackground": "#569f65",
+        "titleBar.activeBackground": "#e6e6fa",
         "titleBar.activeForeground": "#15202b",
-        "titleBar.inactiveBackground": "#569f6599",
+        "titleBar.inactiveBackground": "#e6e6fa99",
         "titleBar.inactiveForeground": "#15202b99"
     },
-    "peacock.color": "#569f65"
+    "peacock.color": "#E6E6FA"
 }
