--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,5 +18,6 @@
         "titleBar.inactiveBackground": "#e6e6fa99",
         "titleBar.inactiveForeground": "#15202b99"
     },
-    "peacock.color": "#E6E6FA"
+    "peacock.color": "#E6E6FA",
+    "makefile.configureOnOpen": false
 }
